added new prices

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -59,11 +59,13 @@
                     <h1 id="profession"><span id="changingProfession">Data Analyst</span></h1>
                    </div>
                   <p>Join North America's top data community and achieve your dream career ✨</p>
-                  <a href="#membership">
-                    <button class="cta-filled">Become a member</button>
+                  <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
+                    <button class="cta-filled">Free 7-day trial, then $50 / month </button>
                   </a>  
+                  <a target="_blank" href="https://buy.stripe.com/4gw8yi26I9qTb168wP">
+                    <button class="hero-price">or $250 / year </button>
+                  </a>
                 </div> 
-                <!-- <img src="/assets/images/hero-pic.png"/> -->
               </div>            
             </section>
 
@@ -164,27 +166,28 @@
               <div class="service-card card-interactive card-color">
                 <div class="card-header">
                   <p>Early Bird Membership Pricing</p>
-                  <h2><span class="crossed-price">$75</span> $25 / month</h2>
+                  <h2><span class="crossed-price">$100</span> $50 / month</h2>
                   <div class="txt-flex">
-                    <p>or $200 / year</p>
-                    <p>(34% off)</p>
+                    <p>or $250 / year</p>
+                    <!-- <p>(34% off)</p> -->
                   </div>                  
                 </div>
                 <ul class="membership-ul">
+                  <li>Free-7 day trial</li>
                   <li>AMA (Ask Me anything) about jobs and career progress</li>
                   <li>Build Data Engineering and Analytics projects portfolio</li>
                   <li>Continuous career journey support, including resume reviews, career planning, interview mocks and Q&A sessions</li>
                   <li>LeetCode workshops, SQL and Data Mock Interviews</li>
-                  <li>Access to Discord community</li>
                   <li>Professional network</li>
                 </ul>
                 <div class="btn-block">
-                  <a href="https://buy.stripe.com/3csaGq3aMauXc5aaET" target="_blank">
-                    <button class="cta-filled">Select Monthly</button>
+                  <a href="https://buy.stripe.com/bIY7uecLm32v6KQ5kB" target="_blank">
+                    <button class="cta-filled">$50 / month </button>
+                  </a>  
+                  <a target="_blank" href="https://buy.stripe.com/4gw8yi26I9qTb168wP">
+                    <button class="cta-filled secondary">$250 / year</button>
                   </a>
-                  <a href="https://buy.stripe.com/14k4i2fXy7iL1qw7sI">
-                    <button class="cta-filled secondary">Select Yearly</button>
-                  </a>
+
                 </div>
               </div>
             </section>
