--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -94,6 +94,8 @@ footer {
 }
 
 .txt-flex {
+    font-size: 1.5rem;
+    font-weight: 600;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -537,14 +539,14 @@ button {
     font-family: 'Source Sans 3', sans-serif;
     font-size: 14px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     line-height: normal;
     display: flex;
     justify-content: center;
     align-items: center;
     align-self: inherit;
     border-radius: 10px;
-    padding: 12px 20px;
+    padding: 12px 24px;
     margin-bottom: 10px;
     width: 100%;
     cursor: pointer;
@@ -554,6 +556,18 @@ button:disabled {
     border: none;
     background: rgba(67, 64, 82, 0.60);
     pointer-events: none;
+}
+
+.hero-price {
+    border: 1px solid #9CA2C6;
+    background-color: #EDEDEE;
+    color: #2B3673;
+    transition: background 0.3s ease;
+}
+
+.hero-price:hover {
+    border: 1px solid #9CA2C6;
+    background-color: #DFDFE0;
 }
 
 .cta-filled{
@@ -823,7 +837,7 @@ input {
     padding: 14px 40px;
     font-size: 18px;
     border-radius: 10px;
-    border: 1px solid #374594;
+    min-width: 360px;
 }
 
 .abt-section {
@@ -1292,7 +1306,7 @@ footer p {
 
 button {
     font-size: 1rem;
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
 }
 
 
