added langing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,6 +35,7 @@
                   <a>Career Tracks ▾</a>
                   <div class="popover-content" id="popover-content" aria-hidden="true">
                     <a href="/pages/data-analyst/">Data Analyst</a>
+                    <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
                     <a href="/pages/analytics-engineer/">Analytics Engineer</a>
                     <a href="/pages/data-engineer/">Data Engineer</a>
                     <a href="/pages/bi-developer/">BI Developer</a>
