added instagram feed, added swag link to nav, fixed invisible nav in mobile version

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,8 @@
             <div class="navbar-links">
               <a href="/pages/about/">About</a>
               <a href="#services">Services</a>
-              <a href="/pages/club500/">Club500</a>
+              <!-- <a href="/pages/club500/">Club500</a> -->
+              <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
               <a href="/surfalytics/2023-06-04-Introduction.html">Course</a>
               <div class="dropdown">
                 <div class="popover-toggle" aria-controls="dropdown-list-1" aria-haspopup="'menu" aria-expanded="false" role="button" tabindex="0">
@@ -55,8 +56,16 @@
               </div>
               <a href="/pages/about/">About</a>
               <a href="#services">Services</a>
+              <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
               <a href="/pages/testimonials/">Career Tracks</a>
-              <a href="/pages/club500/">Club500</a>
+              <div class="popover-content" id="popover-content" aria-hidden="true">
+                <a href="/pages/data-analyst/">Data Analyst</a>
+                <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
+                <a href="/pages/analytics-engineer/">Analytics Engineer</a>
+                <a href="/pages/data-engineer/">Data Engineer</a>
+                <a href="/pages/bi-developer/">BI Developer</a>
+              </div>
+              <!-- <a href="/pages/club500/">Club500</a> -->
               <a href="/surfalytics/2023-06-04-Introduction.html">Course</a>
               <a href="#membership" class="cta-filled">Become a member</a>
           </div>
