--- a/assets/gitbook/landing-page.css
+++ b/assets/gitbook/landing-page.css
@@ -295,9 +295,9 @@ a {
 }
 
 .popover-content {
-    display: none;
-    position: absolute;
-    top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
     background-color: #EFEFEF;
     box-shadow: 0 2px 8px rgba(106, 102, 102, 0.165);
     padding: 8px 24px 8px 16px;
@@ -714,6 +714,24 @@ input {
 
 /* DESKTOP */
 @media screen and (min-width: 769px) {
+
+/* Navigation - Desktop */
+
+.popover-content {
+    display: none;
+    position: absolute;
+    top: 30px;
+    background-color: #EFEFEF;
+    box-shadow: 0 2px 8px rgba(106, 102, 102, 0.165);
+    padding: 8px 24px 8px 16px;
+    border-radius: 5px;
+  }
+  
+  .popover-content a {
+    display: block;
+    text-decoration: none;
+    padding: 8px 0;
+  }
 
 /* HERO - desktop */
 
