--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,19 +54,32 @@
               <div class="close-modal" onclick="toggleMenu()">
                 <iconify-icon icon="material-symbols-light:close"></iconify-icon>
               </div>
-              <a href="/pages/about/">About</a>
-              <a href="#services">Services</a>
-              <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
-              <a href="/pages/testimonials/">Career Tracks</a>
-              <div class="popover-content" id="popover-content" aria-hidden="true">
-                <a href="/pages/data-analyst/">Data Analyst</a>
-                <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
-                <a href="/pages/analytics-engineer/">Analytics Engineer</a>
-                <a href="/pages/data-engineer/">Data Engineer</a>
-                <a href="/pages/bi-developer/">BI Developer</a>
-              </div>
+              <details>
+                <summary><a href="/pages/about/">About</a></summary>
+              </details>
+              <details>
+                <summary><a href="#services">Services</a></summary>
+              </details>
+              <details>
+                <summary><a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
+                </summary>
+              </details>
+              <details open>
+                <summary><a>Career Tracks</a>
+                </summary>
+                <div class="popover-content" id="popover-content" aria-hidden="true">
+                  <a href="/pages/data-analyst/">Data Analyst</a>
+                  <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
+                  <a href="/pages/analytics-engineer/">Analytics Engineer</a>
+                  <a href="/pages/data-engineer/">Data Engineer</a>
+                  <a href="/pages/bi-developer/">BI Developer</a>
+                </div>  
+              </details>
               <!-- <a href="/pages/club500/">Club500</a> -->
-              <a href="/surfalytics/2023-06-04-Introduction.html">Course</a>
+              <details>
+                <summary> <a href="/surfalytics/2023-06-04-Introduction.html">Course</a> </summary>
+              </details>
+              
               <a href="#membership" class="cta-filled">Become a member</a>
           </div>
         </div> 
