added swag section

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -308,6 +308,7 @@
 
             </section>
           
+            {%- include swag-section.html -%}
             {%- include instagram-feed.html -%}
 
         </main>
