--- a/_layouts/data-analyst-landing.html
+++ b/_layouts/data-analyst-landing.html
@@ -217,12 +217,12 @@
           <section>
             <div class="numbers-wrap">
               <div class="number-card card-color">
-                <h1 class="gradient">26</h1>
+                <h1 class="gradient">60+</h1>
                 <p>Active community members</p>
               </div>
               <div class="number-card card-color">
-                <h1 class="gradient">8</h1>
-                <p>Offers received by community members</p>
+                <h1 class="gradient">21</h1>
+                <p>Offers received by community members within the first year</p>
               </div>
               <div class="number-card card-color">
                 <h1 class="gradient">$120k</h1>
