--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -194,13 +194,12 @@
                     <button class="cta-filled">$50 / month </button>
                   </a>  
                   <a target="_blank" href="https://buy.stripe.com/4gw8yi26I9qTb168wP">
-                    <button class="cta-filled secondary">$250 / year</button>
+                    <button class="hero-price">$250 / year</button>
                   </a>
 
                 </div>
               </div>
             </section>
-
 
             <!-- Course promo -->
             <section class="course-promo">
@@ -219,6 +218,7 @@
               </div>
             </section>
 
+            {%- include swag-section.html -%}
 
             <!-- Services pricing -->
             <section id="services" class="services-pricing">
@@ -276,8 +276,6 @@
                 </div>
               </div>
             </section>
-
-
               
             <!-- About the founder -->
             <section class="founder-card">
@@ -308,7 +306,6 @@
 
             </section>
           
-            {%- include swag-section.html -%}
             {%- include instagram-feed.html -%}
 
         </main>
