--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,8 +35,8 @@
                 <div class="popover-toggle" aria-controls="dropdown-list-1" aria-haspopup="'menu" aria-expanded="false" role="button" tabindex="0">
                   <a>Career Tracks ▾</a>
                   <div class="popover-content" id="popover-content" aria-hidden="true">
-                    <a href="/pages/data-analyst/">Data Analyst</a>
-                    <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
+                    <!-- <a href="/pages/data-analyst/">Data Analyst</a> -->
+                    <a href="/pages/data-analyst-landing/">Data Analyst</a>
                     <a href="/pages/analytics-engineer/">Analytics Engineer</a>
                     <a href="/pages/data-engineer/">Data Engineer</a>
                     <a href="/pages/bi-developer/">BI Developer</a>
@@ -67,13 +67,13 @@
               <details open>
                 <summary><a>Career Tracks</a>
                 </summary>
-                <div class="popover-content" id="popover-content" aria-hidden="true">
-                  <a href="/pages/data-analyst/">Data Analyst</a>
-                  <a href="/pages/data-analyst-landing/">Data Analyst Landing</a>
+                <div class="modal-career-tracks">
+                  <!-- <a href="/pages/data-analyst/">Data Analyst</a> -->
+                  <a href="/pages/data-analyst-landing/">Data Analyst</a>
                   <a href="/pages/analytics-engineer/">Analytics Engineer</a>
                   <a href="/pages/data-engineer/">Data Engineer</a>
                   <a href="/pages/bi-developer/">BI Developer</a>
-                </div>  
+                </div>
               </details>
               <!-- <a href="/pages/club500/">Club500</a> -->
               <details>
