--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,8 +27,7 @@
           <div class="navbar-nav">
             <div class="navbar-links">
               <a href="/pages/about/">About</a>
-              <a href="#services">Services</a>
-              <!-- <a href="/pages/club500/">Club500</a> -->
+              <a href="https://surfalytics.com/#services">Services</a>
               <a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
               <a href="/surfalytics/2023-06-04-Introduction.html">Course</a>
               <div class="dropdown">
@@ -58,7 +57,7 @@
                 <summary><a href="/pages/about/">About</a></summary>
               </details>
               <details>
-                <summary><a href="#services">Services</a></summary>
+                <summary><a href="https://surfalytics.com/#services">Services</a></summary>
               </details>
               <details>
                 <summary><a href="https://shop.surfalytics.com/" target="_blank">Swag</a>
