added new designs for landing pages, fixed ui bugs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,9 +36,9 @@
                   <div class="popover-content" id="popover-content" aria-hidden="true">
                     <!-- <a href="/pages/data-analyst/">Data Analyst</a> -->
                     <a href="/pages/data-analyst-landing/">Data Analyst</a>
-                    <a href="/pages/analytics-engineer/">Analytics Engineer</a>
-                    <a href="/pages/data-engineer/">Data Engineer</a>
-                    <a href="/pages/bi-developer/">BI Developer</a>
+                    <a href="/pages/analytics-engineer-landing/">Analytics Engineer</a>
+                    <a href="/pages/data-engineer-landing/">Data Engineer</a>
+                    <a href="/pages/bi-developer-landing/">BI Developer</a>
                   </div>
                 </div>  
               </div>
@@ -69,9 +69,9 @@
                 <div class="modal-career-tracks">
                   <!-- <a href="/pages/data-analyst/">Data Analyst</a> -->
                   <a href="/pages/data-analyst-landing/">Data Analyst</a>
-                  <a href="/pages/analytics-engineer/">Analytics Engineer</a>
-                  <a href="/pages/data-engineer/">Data Engineer</a>
-                  <a href="/pages/bi-developer/">BI Developer</a>
+                  <a href="/pages/analytics-engineer-landing/">Analytics Engineer</a>
+                  <a href="/pages/data-engineer-landing/">Data Engineer</a>
+                  <a href="/pages/bi-developer-landing/">BI Developer</a>
                 </div>
               </details>
               <!-- <a href="/pages/club500/">Club500</a> -->
