--- a/assets/gitbook/landing-page.css
+++ b/assets/gitbook/landing-page.css
@@ -69,28 +69,32 @@ main {
 .pricing-wrap {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 16px;
     align-self: stretch;
     margin-top: 0.5em;
+    padding: 24px;
 }
 
 .perks-card {
     display: flex;
-    padding: 16px 8px;
+    padding: 16px 0;
     align-items: center;
-    gap: 24px;
+    gap: 16px;
     align-self: stretch;
 }
 
 .pricing-card {
     display: flex;
-    padding: 24px;
+    padding: 16px 8px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 16px;
     align-self: stretch; 
+    border: 1px solid #9CA2C6;
+    border-radius: 20px;
+    background-color: rgba(229, 229, 230, 0.50);
 }
 
 .pricing-card p {
@@ -608,7 +612,7 @@ details {
 button {
     color: var(--palette-1-text-primary, #EFF0F4);
     font-family: 'Source Sans 3', sans-serif;
-    font-size: 18px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -927,17 +931,17 @@ input {
 
 .pricing-wrap {
     flex-direction: row;
-    margin-top: 48px;
-    gap: 32px;
+    justify-content: space-between;
+    padding: 48px;
+}
+
+.perks-wrap h3 {
+    margin-bottom: 1em;
 }
 
 .perks-card {
-    padding: 16px 24px;
-}
-
-.perks-card svg {
-    width: 5em;
-    height: 5em;
+    padding: 16px 32px 16px 0;
+    gap: 24px;
 }
 
 .perks-card h4 {
@@ -945,6 +949,7 @@ input {
 }
 
 .pricing-card {
+    padding: 24px;
     min-width: 420px;
     gap: 40px;
 }
@@ -1136,7 +1141,7 @@ li {
 
 /* h1 - desktop */
 h1 {
-    font-size: 64px;
+    font-size: 60px;
 }
 
 /* h2 - desktop */
