added unique proposition block to landings

--- a/_layouts/data-engineer-landing.html
+++ b/_layouts/data-engineer-landing.html
@@ -53,7 +53,7 @@
                 <div class="hero-wrap">
                   <h1 class="gradient">Get your first Data Engineer job in 6 months</h1>
                   <ul>
-                    <li>Learn modern data stack in 1 month</li>
+                    <li>Learn modern data stack and terminology in 1 month</li>
                     <li>Build data projects portfolio in 2 months</li>
                     <li>Prepare for job search</li>
                     <li>Land your dream job offer 🔥</li>
@@ -71,6 +71,49 @@
               <div class="info">
                   <h1 class="gradient">Fastest way to get Data Engineer Job</h2>
                   <p>Surfalytics is an immersive learning platform centered on practical experience. Our 20% focused effort delivers 80% of the results you need, ensuring you're job-ready for your first Data Engineer role in just 6 months.</p>
+              </div>
+            </section>
+
+            <!-- Cards -->
+            <section>
+              <div class="card-padding card-color">
+                <h2 class="gradient" style="margin-bottom:0.5em;">Here you will:</h2>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Gain competitive advantage with fundamental engineering skills</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Create a standout resume that grabs the attention of recruiters</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Develop communication skills to speak the hiring manager's language</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Understand the current job market and assess your skills</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Define clear, achievable and measurable career goals</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Know your worth and target compensation</p>
+                </div>
               </div>
             </section>
 
