--- a/_layouts/bi-developer-landing.html
+++ b/_layouts/bi-developer-landing.html
@@ -74,6 +74,49 @@
               </div>
             </section>
 
+            <!-- Cards -->
+            <section>
+              <div class="card-padding card-color">
+                <h2 class="gradient" style="margin-bottom:0.5em;">Here you will:</h2>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Gain competitive advantage with fundamental engineering skills</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Create a standout resume that grabs the attention of recruiters</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Develop communication skills to speak the hiring manager's language</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Understand the current job market and assess your skills</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Define clear, achievable and measurable career goals</p>
+                </div>
+                <div class="logo-label">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="31" height="30" viewBox="0 0 31 30" fill="none">
+                    <path d="M6.91699 18.125C6.91699 18.125 8.79199 18.125 11.292 22.5C11.292 22.5 18.2407 11.0412 24.417 8.75" stroke="#2B3673" stroke-width="3.125" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>
+                  <p>Know your worth and target compensation</p>
+                </div>
+              </div>
+            </section>
+
             <!-- HOW DO WE GET THESE RESULTS -->
           <section>
             <h2 class="centered">How do we get these results?</h2>
